@@ -720,6 +720,10 @@ sratim.KeepEnglishTitles=false
 #Display and sort the movie genres in English as it retrieved from IMDB  
 sratim.KeepEnglishGenres=false
 
+#Display the cast as it retrieved from IMDB 'true' value will overwrite with the hebrew cast 
+#'true' value will overwrite with the hebrew cast from sratim.co.il - Default value=false 
+sratim.keepImdbCast=false
+
 
 # value to match movie name to subtitles (in precent), 
 # above this value, the plugin will take this subtitles instead of taking the best match based on FPS and source
